--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.11.16",
     "axios": "^0.21.1",
     "pg": "^8.2.1",
     "react": "^18.2.0",
